--- a/library.properties
+++ b/library.properties
@@ -7,7 +7,7 @@ name = ExampleFooLibrary
 authors = [Pike]
 
 # A web page for your library, NOT a direct link to where to download it.
-url = https://github.com/commonpike/processing
+url = https://commonpike.github.io/nl.kw.processing.library-example/dist/summary.html
 
 # The category (or categories) of your library, must be from the following list:
 #   "3D"            "Animation"     "Compilations"      "Data"          
@@ -24,7 +24,7 @@ categories = Utilities
 # repeating the name of your library here. Also, avoid saying anything redundant 
 # like mentioning that it's a library. This should start with a capitalized 
 # letter, and end with a period.
-sentence = An example FOO on how to build a library
+sentence = An working example on how to build a library
 
 # Additional information suitable for the Processing website. The value of
 # 'sentence' always will be prepended, so you should start by writing the
@@ -40,11 +40,11 @@ paragraph =
 # compare different versions of the same library, and check if an update is 
 # available. You should think of it as a counter, counting the total number of 
 # releases you've had.
-version = 22  # This must be parsable as an int
+version = 10  # This must be parsable as an int
 
 # The version as the user will see it. If blank, the version attribute will be 
 # used here. This should be a single word, with no spaces.
-prettyVersion = 0.98a  # This is treated as a String
+prettyVersion = 1.00a  # This is treated as a String
 
 # The min and max revision of Processing compatible with your library.
 # Note that these fields use the revision and not the version of Processing, 
