--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Compile. Doc, Dist
+name: Compile, Create Jar, JavaDoc, Dist
 
 # Controls when the workflow will run
 on:
@@ -32,17 +32,13 @@ jobs:
       
       - name: compile
         run: |
-            #export COREJAR=$COREJAR
-            #export LIBNAME=$LIBNAME
             bin/compile.sh
-            exit $?
+            exit 1
       - name: javadoc
         run: |
-            export COREJAR=$COREJAR
             bin/javadoc.sh
             exit $?
       - name: createdist
         run: |
-            export LIBNAME=$LIBNAME
             bin/createdist.sh
             exit $?
