--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Download core.jar
         run: |
           mkdir tmp
-          curl http://www.java2s.com/Code/JarDownload/processing/processing-core.jar.zip -o tmp/
+          curl http://www.java2s.com/Code/JarDownload/processing/processing-core.jar.zip -o tmp/processing-core.jar.zip
           unzip tmp/processing-core.jar.zip
           ls tmp
       - name: compile
