--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Compile, Create Jar, JavaDoc, Dist
+name: Compile, Jar, Doc, Dist
 
 # Controls when the workflow will run
 on:
@@ -14,7 +14,8 @@ on:
   workflow_dispatch:
 
 env:
-    COREJAR: tmp/processing-core.jar
+    COREURL: https://repo1.maven.org/maven2/org/processing/core/3.3.7/core-3.3.7.jar
+    COREJAR: tmp/core.jar
     LIBNAME: ExampleFooLibrary
 
 # A workflow run is made up of one or more jobs that can 
@@ -33,8 +34,7 @@ jobs:
         run: |
           mkdir tmp
           cd tmp
-          curl http://www.java2s.com/Code/JarDownload/processing/processing-core.jar.zip -o processing-core.jar.zip
-          unzip processing-core.jar.zip
+          curl $COREURL -o core.jar
           cd ../
       - name: compile
         run: |
@@ -48,3 +48,9 @@ jobs:
         run: |
           bin/createdist.sh
           exit $?
+      - name: Commit generated files
+        run: |
+          git config --global user.name 'Github Action'
+          git config --global user.email 'actions@users.noreply.github.com'
+          git commit -um "Generated files"
+          git push
