--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,5 +50,6 @@ jobs:
         run: |
           git config --global user.name 'Github Action'
           git config --global user.email 'actions@users.noreply.github.com'
-          git commit -um "Generated files"
+          git add -u
+          git commit -m "CI Generated files"
           git push
