--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,6 +50,5 @@ jobs:
         run: |
           git config --global user.name 'Github Action'
           git config --global user.email 'actions@users.noreply.github.com'
-          git add -u
-          git commit -m "CI Generated files"
+          git commit -am "CI Generated files"
           git push
