--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,9 +46,11 @@ jobs:
         run: |
           bin/createdist.sh
           exit $?
-      - name: Commit generated files
-        run: |
-          git config --global user.name 'Github Action'
-          git config --global user.email 'actions@users.noreply.github.com'
-          git commit -am "CI Generated files"
-          git push
+      # https://stackoverflow.com/questions/58353392/how-to-save-build-files-react-using-github-actions
+      # error: detached head
+      #- name: Commit generated files
+      #  run: |
+      #    git config --global user.name 'Github Action'
+      #    git config --global user.email 'actions@users.noreply.github.com'
+      #    git commit -am "CI Generated files"
+      #    git push
