--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-# This is a basic workflow to help you get started with Actions
+# Workflow to compile the dist needed for Processing libraries
 
 name: Compile, Jar, Doc, Dist
 
@@ -51,7 +51,7 @@ jobs:
       - name: Commit generated files
         run: |
           git config --global user.name 'Github CI'
-          git config --global user.email 'ci@users.noreply.github.com'
+          git config --global user.email 'commonpike@users.noreply.github.com'
           git add library reference dist
           git add -u
           git status
